--- a/Presupuesto/src/app/Components/panel/panel.component.html
+++ b/Presupuesto/src/app/Components/panel/panel.component.html
@@ -1,11 +1,37 @@
+<div class="col-md-3 border border-4 border-dark rounded-3">
 <form [formGroup]="myPanellForm">
     <div class="input-group input-group-sm  mb-3 w-50 ">
         <label>Numero de paginas: </label>
+         <button 
+            class="btn ms-2 btn-warning"    
+            type="button" 
+            (click)="restar(myPanellForm.value.paginas ,'paginas')"     >
+            -
+        </button>
         <input type="number" class="form-control" [(ngModel)]="numPaginas" formControlName="paginas" min="0">         
+   <button
+            class="btn  btn-warning" 
+            type="button"
+            (click)="sumar('paginas')"      >
+            +
+        </button>
     </div>
 
     <div class="input-group input-group-sm mb-3 w-50">
         <label>Numero de idiomas: </label>
+        <button 
+            class="btn ms-2 btn-warning"    
+            type="button"
+            (click)="restar( myPanellForm.value.idiomas ,'idiomas')"   >
+            -
+        </button>
         <input type="number" class="form-control" formControlName="idiomas" [(ngModel)]="numIdiomas" min="0">
+     <button
+            class="btn  btn-warning" 
+            type="button"
+            (click)="sumar('idiomas')"    >
+            +
+        </button>
     </div>
 </form>
+</div>
