--- a/Presupuesto/src/app/Components/home/home.component.html
+++ b/Presupuesto/src/app/Components/home/home.component.html
@@ -34,5 +34,9 @@
         <p>Precio: {{ SumaTotal|number}}€</p>
       </div>
     </div>
+    <br><br>
+    <!-- <button class="btn btn-info" (click)="resetForm()">Vacia formulario</button><br><br> -->
+    <button class="btn btn-info" ><a routerLink="" class="active-link"> Volver a inicio.🏡</a></button>
+    
   </div>
 </div>
