--- a/Presupuesto/src/app/Components/bienvenida/bienvenida.component.html
+++ b/Presupuesto/src/app/Components/bienvenida/bienvenida.component.html
@@ -1,21 +1,20 @@
-
 <div class="context">
-    <h1>Si necesitas crear una página web, hacer una campaña de SEO o una campaña publicitaria... has llegado al lugar indicado.</h1><br><br>
-   <button class="btn btn-light "> <a routerLink="home"class="active-link">Obtener presupuesto.🖥️</a></button>
+  <h1>Si necesitas crear una página web... <br> hacer una campaña de SEO... <br> o una campaña publicitaria... <br> has
+    llegado al lugar indicado.</h1><br><br>
+  <button class="btn btn-light "> <a routerLink="home" class="active-link">Obtener presupuesto.🖥️</a></button>
 </div>
 
-
-<div class="area" >
-        <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-        </ul>
-</div >
+<div class="area">
+  <ul class="circles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</div>
