--- a/Presupuesto/src/app/Components/panel/panel.component.html
+++ b/Presupuesto/src/app/Components/panel/panel.component.html
@@ -1,37 +1,51 @@
 <div class="col-md-3 border border-4 border-dark rounded-3">
-<form [formGroup]="myPanellForm">
-    <div class="input-group input-group-sm  mb-3 w-50 ">
-        <label>Numero de paginas: </label>
-         <button 
-            class="btn ms-2 btn-warning"    
-            type="button" 
-            (click)="restar(myPanellForm.value.paginas ,'paginas')"     >
-            -
-        </button>
-        <input type="number" class="form-control" [(ngModel)]="numPaginas" formControlName="paginas" min="0">         
-   <button
-            class="btn  btn-warning" 
-            type="button"
-            (click)="sumar('paginas')"      >
-            +
-        </button>
+  <form [formGroup]="myPanellForm">
+    <div class="input-group input-group-sm  m-2 p-2 w-20 ">
+      <label>Numero de paginas: </label>
+      <button class="btn ms-2 btn-warning" type="button" (click)="restar(myPanellForm.value.paginas ,'paginas')">
+        -
+      </button>
+      <input type="number" class="form-control" [(ngModel)]="numPaginas" formControlName="paginas" min="0">
+      <button class="btn  btn-warning" type="button" (click)="sumar('paginas')">
+        +
+      </button>
+      <button type="button" class="btn rounded-5 " (click)="modal.open(contenido1)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+          class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+          <path
+            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+        </svg>
+      </button>
+      <ng-template #contenido1 let-modal>
+        <div class="border border-4 border-dark rounded-3 p-2">
+          <p>Este componente indica el número de páginas del sitio web.</p>
+        </div>
+
+      </ng-template>
     </div>
 
-    <div class="input-group input-group-sm mb-3 w-50">
-        <label>Numero de idiomas: </label>
-        <button 
-            class="btn ms-2 btn-warning"    
-            type="button"
-            (click)="restar( myPanellForm.value.idiomas ,'idiomas')"   >
-            -
-        </button>
-        <input type="number" class="form-control" formControlName="idiomas" [(ngModel)]="numIdiomas" min="0">
-     <button
-            class="btn  btn-warning" 
-            type="button"
-            (click)="sumar('idiomas')"    >
-            +
-        </button>
+    <div class="input-group input-group-sm m-2 p-2 w-20">
+      <label>Numero de idiomas: </label>
+      <button class="btn ms-2 btn-warning" type="button" (click)="restar( myPanellForm.value.idiomas ,'idiomas')">
+        -
+      </button>
+      <input type="number" class="form-control" formControlName="idiomas" [(ngModel)]="numIdiomas" min="0">
+      <button class="btn  btn-warning" type="button" (click)="sumar('idiomas')">
+        +
+      </button>
+      <button type="button" class="btn rounded-5 " (click)="modal.open(contenido2)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+          class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+          <path
+            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+        </svg>
+      </button>
+      <ng-template #contenido2 let-modal>
+        <div class="border border-4 border-dark rounded-3 p-2">
+          <p>Este componente indica en cuantos idiomas necesitas el sitio web.</p>
+        </div>
+
+      </ng-template>
     </div>
-</form>
+  </form>
 </div>
