--- a/Presupuesto/src/app/Components/bienvenida/bienvenida.component.html
+++ b/Presupuesto/src/app/Components/bienvenida/bienvenida.component.html
@@ -1,7 +1,7 @@
 <div class="context">
   <h1>Si necesitas crear una página web... <br> hacer una campaña de SEO... <br> o una campaña publicitaria... <br> has
     llegado al lugar indicado.</h1><br><br>
-  <button class="btn btn-light "> <a routerLink="home" class="active-link">Obtener presupuesto.🖥️</a></button>
+  <button class="btn btn-light "> <a href="home">Obtener presupuesto.🖥️</a></button>
 </div>
 
 <div class="area">
